--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-to": "^0.1.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
